fix when failing retrieving previous/next data

--- a/index.html
+++ b/index.html
@@ -460,11 +460,12 @@
 
         // if view is not full (no blocks at 5mins), get previous day
         if (parseInt(dataKeys[0]) > 5*60+start){
-           var mapPreviousDay = window.ramen_getBlocks(blockchainType, date-24*60*60).blocks[blockchainType]
-           data = window.ramen_mergeData(data, blockchainType, mapPreviousDay)
+          var mapPreviousDay = window.ramen_getBlocks(blockchainType, date-24*60*60)
+          if (mapPreviousDay != null) data = window.ramen_mergeData(data, blockchainType, mapPreviousDay.blocks[blockchainType])
+
         } else if (parseInt(dataKeys[dataKeys.length-1]) < ((12*60)-5)*60+start){
-          var mapNextDay = window.ramen_getBlocks(blockchainType, date+24*60*60).blocks[blockchainType]
-          data = window.ramen_mergeData(data, blockchainType, mapNextDay)
+          var mapNextDay = window.ramen_getBlocks(blockchainType, date+24*60*60)
+          if (mapNextDay != null) data = window.ramen_mergeData(data, blockchainType, mapNextDay.blocks[blockchainType])
         }
 
         return window.ramen_parser(data, blockchainType, date)
